assets/main.scss
---
---

:root {
  --primary-color: #F74C25;
  --line-height: 1.2;
  --minimum-space-from-edge: 20px;
  @media (min-width: 768px) {
    --minimum-space-from-edge: 40px;
  }
  @media (min-width: 1440px) {
    --minimum-space-from-edge: 100px;
  }
}

/*
 * Fonts
 */

/*
 * Navigation
 */

/*
 * Body
 */

body {
  font-family: "Suisse Int'l", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: white;
  background-color: #EFECE4;
  font-size: calc(5.35vmin + 1.88vmax); // vmax is (2 / 5.7) of vmin
  line-height: var(--line-height);
}

.highlighted {
  color: var(--primary-color);
}

.container-fluid.wrapper {
  padding: 20px;
  @media (min-width: 768px) {
    padding: 44px;
  }
  @media (min-width: 1440px) {
    padding: 51px;
  }
}

span, a {
  font-family: "SuisseWorks-Regular", "Times New Roman", Times, serif;
  text-decoration: underline;
  color: unset;
  transition: color .15s ease-in-out,
    background-color .15s ease-in-out,
    border-color .15s ease-in-out,
    box-shadow .15s ease-in-out;
  &:hover {
    color: var(--primary-color);
  }
  &#company-name {
    text-decoration: none;
  }
}

.hover-image {
  position: fixed;
  display: none;
  z-index: 99;
}

@media (max-width: 1439px) {
  #bag {
    width: 398px;
  }
  #waste {
    width: 394px;
  }
  #hood {
    width: 341px;
  }
}

@media (max-width: 767px) {
  #bag {
    width: 238px;
  }
  #waste {
    width: 243px;
  }
  #hood {
    width: 308px;
  }
}

.mailing-list {
  position: absolute;
  display: none;
  width: 100%;
  height: 100vh;
  top: 0;
  left: 0;
  padding:50px;
  background-color: var(--primary-color);
  form {
    display: flex;
    flex-direction: column;
    height: calc(100vh - 100px);
    justify-content: space-between;
    input[type=text] {
      background: none;
      border: none;
      outline: none;
      color: white;
      padding: 0;
      margin: 0;
      &::placeholder {
        color: rgba(255,255,255,0.4);
      }
      
    }
    .actions {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      @media (max-width: 768px) {
        flex-direction: column;
        justify-content: flex-end;
        align-items: flex-start;
      }
      .btn {
        color: rgba(255,255,255,0.4);
        font-size: 1em;
        font-family: "SuisseWorks-Regular", "Times New Roman", Times, serif;
        text-decoration: none;
        line-height: var(--line-height);
        padding: 0;
        outline: none;
        &:hover {
          color: white;
        }
      }
    }
  }
  
}


/*
 * Footer
 */

